--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ a{text-decoration: none;}
 #header{
 	width: 100%;
 	height: 80px;
-	background: #fff
+	background: #fff;
 }
 
 #logo{
@@ -179,8 +179,8 @@ h5{line-height: 10px;}
 }
 
 #dp{
-	background: url('../images/dp2.jpg') center top no-repeat;
-	background-size: 380px;
+	background: url('../images/dp3.jpg') center top no-repeat;
+	background-size: 400px;
 	border: 10px solid #fff;
 	min-width: 300px;
 	box-shadow:2px 2px 10px #333;
@@ -317,7 +317,29 @@ h6{
 
 
 /*----------Media Queries----------*/
+@media screen and (max-width: 675px){
 
+	#header{
+		height: 60px;
+	}
+	#logo{
+		display: none;
+	}
+
+	#menu{
+		margin-top: 8px;
+		width: 100%;
+		padding:10px;
+	}
+	#menu>ul{
+		padding-left: -10px;
+	}
+
+	#menu>ul>a>li{
+		padding: 20px 15px;
+	}
+
+}
 
 @media screen and (max-width: 1380px){
 
