--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,9 @@
 .bgw{background: #fff;}
 .size-25{font-size: 25px;}
 .shadow{text-shadow:0px 0px 1px #000;}
+.tal{text-align: left;}
+.tar{text-align: right;}
+.tac{text-align: center;}
 
 /*---------Height--------*/
 
@@ -27,6 +30,7 @@ body{
 }
 
 a{text-decoration: none;}
+li{list-style: none;}
 
 
 /*---------FONTS--------------*/
@@ -48,47 +52,10 @@ a{text-decoration: none;}
 	src:url('../fonts/noval.otf');
 }
 
-/*-------Header------*/
+/*-------Cover------*/
+
+
 .fixed { position: fixed; top:0;}
-#cont{height: 5000px}
-
-#header{
-	width: 100%;
-	height: 80px;
-	background: #fff;
-}
-
-#logo{
-	height: 60px;
-	width: 200px;
-	padding:10px;
-	background: url('../images/logo.svg') center center no-repeat;
-	background-size: 200px auto;
-}
-
-#menu{
-	float: right;
-	margin-top: -62px;
-	margin-right: 20px;
-	text-transform: uppercase;
-	font-size: 13px;
-	font-weight: bold;
-	color: #727272;
-}
-
-#menu>ul>a>li{
-	list-style: none;
-	display: inline;
-	padding: 30px 15px;
-	color: #727272;
-	font-family:regular;
-}
-
-#menu>ul>a>li:hover{
-	border-bottom: 4px solid #00bcd4;
-	color: #00bcd4;
-}
-
 
 #cover{
 	display: flex;
@@ -142,20 +109,66 @@ a{text-decoration: none;}
 }
 
 
-/*---------------------ABOUT ME--------------*/
-.about{
-	height: 300px;
-	width: auto;
-	margin: 20px;
+
+
+/*----------HEADER----------*/
+
+#header{
+	min-height: 80px;
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	background: #fff;
 }
 
-#about{
-	padding-top: 50px;
-	padding-bottom: 200px;
-	display: flex;
-	align-items:center;
-	justify-content:center;
+#logo{
+	height: 60px;
+	width: 200px;
+	padding:10px;
+	background: url('../images/logo.svg') center center no-repeat;
+	background-size: 200px auto;
 }
+
+#menu{
+	display:flex;
+	justify-content:flex-end;
+	padding-right: 10px;
+}
+
+
+.item{
+	font-family: regular;
+	font-size: 15px;
+	padding: 29px;
+	color: #333;
+	text-align: center;
+	border-top: 5px solid #fff;
+}
+
+.item:hover{
+	color: #000;
+	border-top: 5px solid #00bcd4;
+}
+
+
+/*------------ABOUT----------*/
+
+.about{
+	min-height: 300px;
+	display: flex;
+}
+
+
+.aboutbox{
+	border: 1px solid #444;
+	padding: 80px;
+}
+
+
+.box1{flex:2;}
+.box2{flex:1;}
+.box3{flex:1.5;}
 
 h2{
 	font-size: 30px;
@@ -171,228 +184,84 @@ p{
 	padding: 10px;
 }
 
-h5{line-height: 10px;}
-
-.story{
-	width: 500px;
-	padding: 10px 10px 50px 10px;
-}
 
 #dp{
-	background: url('../images/dp3.jpg') center top no-repeat;
+	height: 300px;
+	min-width: 200px;
+	max-width: 300px;
+	margin: auto;
+	background: url("../images/dp3.jpg") no-repeat top center;
 	background-size: 400px;
+	margin-top: 50px;
 	border: 10px solid #fff;
-	min-width: 300px;
 	box-shadow:2px 2px 10px #333;
-	margin-top: 60px;
 }
-
-#info{
-	width: 500px;
-	flex-direction: column;
-	font-family: noval;
-	font-size: 20px;
-	padding: 10px;
-	font-weight: bolder;
-	padding: 10px 10px 50px 10px;
-}
-
 
 #pi{
+	width: 250px;
 	display: flex;
 	justify-content:left;
 	margin-top: -20px;
 	margin-left: 30px;
+	margin: auto;
 }
 
+h5{
+	line-height: 10px;
+	font-family: noval;
+	font-size: 17px;
+	font-weight: bolder;
 
-#social>ul>a>li{
-	height: 50px;
-	width:50px;
-	list-style: none;
-	border-radius:50px;
-	margin-left: 5px;
 }
 
-#social>ul{
-	display: flex;
-	justify-content:left;
-}
-
-.social{
-	box-shadow: 0px 1px 5px #333;
-}
-
-.social:hover{box-shadow: 0px 2px 8px #333}
-
-#fb{background: url('../images/fb.svg') no-repeat center; background-size:50px auto;}
-#tw{background: url('../images/tw.svg') no-repeat center; background-size:50px auto;}
-#in{background: url('../images/in.svg') no-repeat center; background-size:50px auto;}
-#pin{background: url('../images/pi.svg') no-repeat center; background-size:50px auto;}
-#gp{background: url('../images/gp.svg') no-repeat center; background-size:50px auto;}
 
 hr{background-color: #ddd; height: 1px; border:none; line-height: 5px;}
 
+/*-------------MEDIA SCREENS--------------*/
 
-
-
-/*--------------Skills-----------*/
-
-#skills{
-	display: flex;
-	background: url('../images/skills15.jpg') fixed no-repeat center;
-	background-size: cover;
-	align-items:center;
-	justify-content:space-around;
-	padding: 120px 80px 80px 80px;
-}
-
-
-#stext{width: 30%;margin-top: -50px;}
-
-h3{
-	font-size: 50px;
-	font-family: regular;
-	color:#444;
-	padding-left: 10px;
-}
-
-#bgraph{
-	display: flex;
-	align-items: flex-end;
-	border-bottom: 3px solid #00bcd4;
-	height: 500px;
-}
-.bar{
-	min-width: 100px;
-	margin: 20px;
-	margin-bottom: 0px;
-	background:#00bcd4;
-}
-
-h6{
-	text-align: center;
-	margin-top: -60px;
-	color: #00bcd4;
-	font-family: regular;
-	font-size: 16px;
-}
-
-.circle{
-	height: 8px;
-	width: 8px;
-	margin: -30px auto 0px auto;
-	border-radius: 25px;
-	background: #00bcd4;
-}
-
-.abar{
-	height: 40px;
-	width: 2px;
-	margin: -1px auto 0px auto;
-	background: #00bcd4;
+@media screen and (max-width: 1250px) {
+	.about{flex-flow: row wrap;}
+    .box1	{ flex:1 100%;}
+	.box2	{ flex:1;} 
+	.box3	{ flex:1;}
 
 }
 
-.age{
-	color: #fff;
-	font-family: noval;
-	font-size: 20px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+@media screen and (max-width: 550px){
+
+		.item{
+			font-size: 15px;
+			padding: 15px;
+			flex:1;
+		}
+		
+		#text>h1{
+			font-size: 40px;
+		}
+
+		#text>p{
+			font-size: 15px;
+		}
+
+		p{
+		font-size: 17px;
+		padding: 5px;
+		}
+
+		h2{font-size: 25px;}
+		h5{font-size: 15px;}
+		#pi{width: 220px;}
+		.aboutbox{padding: 50px;}
+		
 }
 
-/*----------portfolio--------*/
 
-#port{
-	display: flex;
-	height: 500px;
-	background: #00bcd4;
-	align-items:center;
-	justify-content:space-around;
-	padding: 120px 80px 80px 80px;
-}
+@media screen and (max-width: 780px){
 
-
-
-/*----------Media Queries----------*/
-@media screen and (max-width: 675px){
-
-	#header{
-		height: 60px;
-	}
-	#logo{
-		display: none;
-	}
-
-	#menu{
-		margin-top: 8px;
-		width: 100%;
-		padding:10px;
-	}
-	#menu>ul{
-		padding-left: -10px;
-	}
-
-	#menu>ul>a>li{
-		padding: 20px 15px;
-	}
+		#header{
+			justify-content:center;
+		}
 
 }
 
-@media screen and (max-width: 1380px){
 
-	#bgraph{
-		height: 600px;
-		overflow: scroll;
-		overflow-y:hidden;
-	}
-
-	#stext{width: 50%;margin-top: -50px;}
-
-	#about{
-		flex-direction: column;
-	}
-
-	.story{
-		width: 80%;
-		padding: 10px 10px 50px 10px;
-	}
-
-	#info{
-		width: 80%;
-		flex-direction: column;
-		font-family: noval;
-		font-size: 20px;
-		padding: 10px;
-		font-weight: bolder;
-		padding: 10px 10px 50px 10px;
-	}
-
-	#info>h2{
-		text-align: center;
-	}
-
-
-	#pi{
-		justify-content:center;
-		margin-top: 0px;
-		margin-left: 0px;
-	}
-
-	#social>ul>a>li{
-		margin-left: 5px;
-	}
-
-	#social>ul{
-		display: flex;
-		justify-content:center;
-	}
-
-	.social{
-		box-shadow: 0px 1px 5px #333;
-	}
-
-
-}
